ptp-agent-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ptp-agent
  labels:
    name: ptp-agent
    app: ptp-agent
